--- a/index.html
+++ b/index.html
@@ -195,30 +195,13 @@
                 <span class="text-primary flex-shrink-0 me-2">X</span>
                 Liketrex Technology
             </a>
-            <a class="btn btn-primary btn-sm fs-sm order-lg-3 d-none d-sm-inline-flex" href="contact.html">
-              Get started ->
-            </a>
-            <button class="navbar-toggler ms-sm-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
-            <nav class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav navbar-nav-scroll me-auto" style="--ar-scroll-height: 520px;">
-                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="website-design-development.html">Web Studio</a></li>
-                <li class="nav-item"><a class="nav-link" href="digital-marketing-agency.html">Digital Marketing</a></li>
-                <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
-                <li class="nav-item"><a class="nav-link" href="case-studies.html">Case Studies</a></li>
-                <li class="nav-item"><a class="nav-link" href="about-agency.html">About us</a></li>
-              </ul>
-              <div class="d-sm-none p-3 mt-n3">
-                <a class="btn btn-primary w-100  mb-1" href="contact.html">Get started -></a>
-              </div>
-            </nav>
           </div>
         </header>
       </div>      
       
       <!-- Page content-->
 
-      <div class="container">
+      <div class="container py5 mt5" style="margin-top: 200px;">
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FRNbE9apetJg0AbYhZcKrbW%2FMAGO-International-Exim-(1.1.0)%3Fnode-id%3D3455%253A1838%26t%3D2bCQvGOQ6f0reX3l-1" allowfullscreen>
         </iframe>
       </div>
