--- a/about.html
+++ b/about.html
@@ -135,6 +135,18 @@
               The best companies in the world. <br />
               Our Partners
             </h2>
+            <div class="row">
+              <div class="col-4 m-5">
+                <img src="assets/img/brands/amba-bhadang.png" style="height: 200px; width: auto;" class="p-5">
+              </div>
+              <div class="col-4 m-5">
+                <img src="assets/img/brands/bamboo-india.png" style="height: 200px; width: auto;" class="p-5">
+              </div>
+              <div class="col-4 m-5">
+                <img src="assets/img/brands/gore-bandhu.png" style="height: 200px; width: auto;" class="p-5">
+              </div>
+            </div>
+            
           </div>
         </div>
         <div class="row">
@@ -179,9 +191,9 @@
             <h1 class="text-white">
               Want to know more about our products ?
             </h1>
-            <p class="fs-lg text-white-80 mb-6 mb-md-8">
+            <!-- <p class="fs-lg text-white-80 mb-6 mb-md-8">
               We’ve already shipped ** number of orders to many countries.
-            </p>
+            </p> -->
             <a href="#!" class="btn btn-pill btn-primary lift">
               Contact now <i class="fe fe-arrow-right ms-2"></i>
             </a>
