--- a/bamboo-products.html
+++ b/bamboo-products.html
@@ -26,7 +26,7 @@
           </button>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarLandings" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" id="navbarLandings" data-bs-toggle="dropdown" href="index.html" aria-haspopup="true" aria-expanded="false">
                 Home
               </a>
             </li>
@@ -89,7 +89,7 @@
 
     <div class="row p-5 m-5">
       <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/all-bamboo-products.jpg);">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/toothbrush.png);">
           <a class="card-meta" href="#!">
             <hr class="card-meta-divider text-white-20">
             <h6 class="text-uppercase text-white-80 me-2 mb-0">
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/toothbrush-1.jpg);">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/toothbrush-2.jpg);">
           <a class="card-meta" href="#!">
             <hr class="card-meta-divider text-white-20">
             <h6 class="text-uppercase text-white-80 me-2 mb-0">
@@ -118,9 +118,73 @@
           </a>
         </div>
       </div>
-    </div>      
+    </div>
 
+    <div class="row p-5 m-5">
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/comb.png);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Comb
+            </h6>
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/earbud.png);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Ear bud
+            </h6>
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/straw.png);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Straw
+            </h6>
+          </a>
+        </div>
+      </div>
+    </div>
 
+    <div class="row p-5 m-5">
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/straw.jpg);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Straw
+            </h6>
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/Toothbrush-Natural-Kids-Soft.png);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Toothbrush Natural Kids Soft
+            </h6>
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/raw-bamboo.jpeg);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Raw Bamboo
+            </h6>
+          </a>
+        </div>
+      </div>
+    </div>    
 
     <section data-jarallax data-speed=".8" class="py-12 py-md-14 overlay overlay-black overlay-80 jarallax" style="background-image: url(assets/img/all-bamboo-products.jpg);">
       <div class="container">
@@ -129,9 +193,9 @@
             <h1 class="text-white">
               Want to know more about our products ?
             </h1>
-            <p class="fs-lg text-white-80 mb-6 mb-md-8">
+            <!-- <p class="fs-lg text-white-80 mb-6 mb-md-8">
               We’ve already shipped ** number of orders to many countries.
-            </p>
+            </p> -->
             <a href="#!" class="btn btn-pill btn-primary lift">
               Contact now <i class="fe fe-arrow-right ms-2"></i>
             </a>
