--- a/contact.html
+++ b/contact.html
@@ -84,12 +84,24 @@
                 <input class="form-control" id="contactEmail" type="email" placeholder="hello@domain.com">
               </div>
               <div class="form-group mb-5">
+                <label class="form-label" for="contactEmail">Contact No.</label>
+                <input class="form-control" id="contactEmail" type="number" placeholder="Contact No.">
+              </div>
+              <div class="form-group mb-5">
+                <label class="form-label" for="">Which products you are interested in</label>
+                <input class="form-control" id="" type="number" placeholder="">
+              </div>
+              <div class="form-group mb-5">
                 <label class="form-label" for="">Establishment Year</label>
                 <input class="form-control" id="" type="number" placeholder="Establishment Year">
               </div>
               <div class="form-group mb-5">
-                <label class="form-label" for="">Number of shipments Import Last 1 Year</label>
+                <label class="form-label" for="">Number of shipments Import Last 1 Calender Year</label>
                 <input class="form-control" id="" type="number" placeholder="Number of shipments Import Last 1 Year">
+              </div>
+              <div class="form-group mb-5">
+                <label class="form-label" for="">Preferred Incoterm</label>
+                <input class="form-control" id="" type="text" placeholder="Your Preferred Incoterm">
               </div>
               <div class="form-group mb-5">
                 <label class="form-label" for="">Company Type</label>
@@ -112,6 +124,15 @@
                   <option>No</option>
                 </select>
               </div>
+              <div class="form-group mb-5">
+                <label class="form-label" for="">Are you interested to import/source any other product from India  which is not mentioned on our website ?</label>
+                <select class="form-control">
+                  <option>Select</option>
+                  <option>Yes</option>
+                  <option>No</option>
+                </select>
+                <input class="form-control" id="" type="text" placeholder="specify those products/ product">
+              </div> 
               <div class="form-group mb-5">
                 <label for="contactMessage">What can we help you with?</label>
                 <textarea class="form-control" id="contactMessage" rows="5" placeholder="Tell us what we can help you with!"></textarea>
