--- a/food-products.html
+++ b/food-products.html
@@ -89,38 +89,100 @@
 
     <div class="row p-5 m-5">
       <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/food-2.jpg);">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/ambabhadang-1kg.jpeg);">
           <a class="card-meta" href="#!">
             <hr class="card-meta-divider text-white-20">
             <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Namkin
+              Ambabhadang 1kg
             </h6>
           </a>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/food-2.jpg);">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/ambabhadang-2kg.jpeg);">
           <a class="card-meta" href="#!">
             <hr class="card-meta-divider text-white-20">
             <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Namkin
+              Ambabhadang 2kg
             </h6>
           </a>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/food-2.jpg);">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/ambabhadang-5kg.jpeg);">
           <a class="card-meta" href="#!">
             <hr class="card-meta-divider text-white-20">
             <h6 class="text-uppercase text-white-80 me-2 mb-0">
-              Namkin
+              Ambabhadang 5kg
             </h6>
           </a>
         </div>
       </div>
     </div>      
-
-
+    <div class="row p-5 m-5">
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/ambabhadang-10kg.jpeg);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Ambabhadang 10kg
+            </h6>
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/ambabhadang-500g.jpeg);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Ambabhadang 500g
+            </h6>
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/poha-chivda-200g.jpg);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Poha Chivda 200g
+            </h6>
+          </a>
+        </div>
+      </div>
+    </div>      
+    <div class="row p-5 m-5">
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product-garlic-500-single.jpg);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Garlic 500
+            </h6>
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product-Non-garlic200g-single.jpg);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Non-Garlic 200
+            </h6>
+          </a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/bhel-mix-200g.jpg);">
+          <a class="card-meta" href="#!">
+            <hr class="card-meta-divider text-white-20">
+            <h6 class="text-uppercase text-white-80 me-2 mb-0">
+              Bhel Mix 200g
+            </h6>
+          </a>
+        </div>
+      </div>
+    </div>      
 
     <section data-jarallax data-speed=".8" class="py-12 py-md-14 overlay overlay-black overlay-80 jarallax" style="background-image: url(assets/img/all-bamboo-products.jpg);">
       <div class="container">
@@ -129,9 +191,9 @@
             <h1 class="text-white">
               Want to know more about our products ?
             </h1>
-            <p class="fs-lg text-white-80 mb-6 mb-md-8">
+            <!-- <p class="fs-lg text-white-80 mb-6 mb-md-8">
               We’ve already shipped ** number of orders to many countries.
-            </p>
+            </p> -->
             <a href="#!" class="btn btn-pill btn-primary lift">
               Contact now <i class="fe fe-arrow-right ms-2"></i>
             </a>
