--- a/help-center.html
+++ b/help-center.html
@@ -115,7 +115,7 @@
               <div class="accordion-item">
                 <div class="accordion-button collapsed" role="button" data-bs-toggle="collapse" data-bs-target="#helpEight" aria-expanded="false" aria-controls="helpEight">
                   <span class="me-4" id="helpEightHeading">
-                    Q. ?
+                    Q. Preferred Incoterm ?
                   </span>
                   <div class="text-muted ms-auto">
                     <!-- <span class="fs-sm me-4 d-none d-md-inline">Updated last week</span> -->
@@ -124,7 +124,7 @@
                 <div class="accordion-collapse collapse" id="helpEight" aria-labelledby="helpEightHeading" data-bs-parent="#helpAccordionTwo">
                   <div class="accordion-body">
                     <p class="text-gray-700">
-                      answers
+                      we accept all type of Incoterm, mention your prefered in our contact list.
                     </p>
                   </div>
                 </div>
@@ -132,7 +132,7 @@
               <div class="accordion-item">
                 <div class="accordion-button collapsed" role="button" data-bs-toggle="collapse" data-bs-target="#helpEight" aria-expanded="false" aria-controls="helpEight">
                   <span class="me-4" id="helpEightHeading">
-                    Q. ?
+                    Q. Are you interested to import/source any other product from India  which is not mentioned on our website ?
                   </span>
                   <div class="text-muted ms-auto">
                     <!-- <span class="fs-sm me-4 d-none d-md-inline">Updated last week</span> -->
@@ -141,7 +141,7 @@
                 <div class="accordion-collapse collapse" id="helpEight" aria-labelledby="helpEightHeading" data-bs-parent="#helpAccordionTwo">
                   <div class="accordion-body">
                     <p class="text-gray-700">
-                      answers
+                      We deliver all food and bamboo related products. contact us. 
                     </p>
                   </div>
                 </div>
