--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-12 col-md-7 order-md-1">
             <h1 class="display-4">
               Order quality bamboo products. <br>
-              <span class="text-primary">Imagine entirely new ones.</span>
+              <span class="text-primary">unique and natural.</span>
             </h1>
             <p class="lead text-muted mb-0">
               Explore our range of edibles and best designed Bamboo products.
