--- a/bamboo-products.html
+++ b/bamboo-products.html
@@ -45,7 +45,7 @@
     </nav>
 
     <!-- WELCOME -->
-    <section data-jarallax data-speed=".8" class="pt-10 pt-md-14 pb-12 pb-md-15 overlay overlay-dark overlay-80 jarallax" style="background-image: url(assets/img/all-bamboo-products.jpg);">
+    <section data-jarallax data-speed=".8" class="pt-10 pt-md-14 pb-12 pb-md-15 overlay overlay-dark overlay-80 jarallax" style="background-image: url(assets/img/product/all-bamboo-products.png);">
 
       <!-- Content -->
       <div class="container">
@@ -158,18 +158,6 @@
     </div>
 
     <div class="row p-5 m-5">
-      <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/straw.jpg);">
-          <div class="card-footer">
-            <span class="card-meta pt-5">
-              <hr class="card-meta-divider text-white">
-              <h5 class="text-uppercase text-white" style="font-weight: bold;">
-                Straw
-              </h5>
-            </span>
-          </div>
-        </div>
-      </div>
       <div class="col-12 col-md-6 col-lg-3 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/Toothbrush-Natural-Kids-Soft.png);">
           <div class="card-footer">
@@ -183,7 +171,19 @@
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-4 d-flex">
-        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/);">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/straw.jpg);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Straw
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product/kit-1.jpg);">
           <div class="card-footer">
             <span class="card-meta pt-5">
               <hr class="card-meta-divider text-white">
@@ -194,9 +194,85 @@
           </div>
         </div>
       </div>
-    </div>    
+    </div>
+    <div class="row p-5 m-5">
+      <div class="col-12 col-md-6 col-lg-3 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product/color-brush-1.png);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Toothbrush
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product/straw-1.jpg);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Straw
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product/kit-2.jpg);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Kit
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div> 
+    <div class="row p-5 m-5">
+      <div class="col-12 col-md-6 col-lg-3 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product/pack-of-2.png);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Toothbrush Pack of 2
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product/color-brush-2.png);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Toothbrush
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/product/pack-of-4.png);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Toothbrush Pack of 4
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div> 
 
-    <section data-jarallax data-speed=".8" class="py-12 py-md-14 overlay overlay-black overlay-80 jarallax" style="background-image: url(assets/img/all-bamboo-products.jpg);">
+    <section data-jarallax data-speed=".8" class="py-12 py-md-14 overlay overlay-black overlay-80 jarallax" style="background-image: url(assets/img/product/all-bamboo-products.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-1- col-lg-8 text-center">
