--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
             <hr class="hr-sm my-6 my-md-8 mx-auto bg-gray-300">
 
             <!-- Form -->
-            <form class="gform card-body p-4" method="POST" action="https://script.google.com/macros/s/AKfycbyGGmvl3G8liiZPqDhZvZnkz1n-yhJxFC15iRe6pPaR9katpwFhcNC54H9EK9CS1Hl4/exec">
+            <form class="gform card-body p-4" method="POST" action="https://script.google.com/macros/s/AKfycbzYEsU1lr9vnue3QgzEoRMiOxKngeOJjstRQ7Svc8x2goQPzfjOE4DtI2lpcPxdROv2/exec">
               <div class="form-group mb-">
                 <label class="form-label" for="contactName">Full name *</label>
                 <input class="form-control" id="contactName" name="Name" type="text" placeholder="Full name" required>
@@ -80,7 +80,7 @@
               </div>
               <div class="form-group mb-5">
                 <label class="form-label" for="">Which products you are interested in</label>
-                <input class="form-control" id="" type="text" name="Products_Interested" placeholder="">
+                <input class="form-control" id="" type="text" name="Want_Products" placeholder="">
               </div>
               <div class="form-group mb-5">
                 <label class="form-label" for="">Establishment Year</label>
