--- a/about.html
+++ b/about.html
@@ -90,15 +90,17 @@
     <section class="pt-8 pt-md-0 border-bottom bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-6">
-            <div class="ratio ratio-1x1 d-md-none">
+          <div class="col-12 col-md-6"style="position: relative; object-fit: contain; object-position: center;">
+            <!-- <div class="ratio ratio-1x1 d-md-none">
               <div data-map='{"center": [-118.244615, 34.052979], "zoom": 12}'></div>
             </div>
             <div class="position-relative h-100 vw-50 float-end d-none d-md-block">
               <div class="h-100 w-100" data-map='{"center": [-118.244615, 34.052979], "zoom": 12}'></div>
               <div class="shape shape-end shape-fluid-y text-light">
                 <svg viewBox="0 0 100 1544" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 386V0h100v1544H50v-386L0 386z" fill="currentColor"/></svg>              </div>
-            </div>
+            </div> -->
+            <img class="p-5" src="assets/img/logo/mago-logo-blue.png "style="position: relative; object-fit: contain; object-position: center; margin-top: 20%;">
+            
           </div>
           <div class="col-12 col-md-6 col-lg-5 offset-lg-1 py-8 py-md-11 py-lg-12">
 
@@ -161,7 +163,7 @@
     <section>
       <div class="flickity-button-white flickity-button-inset" data-flickity='{"imagesLoaded": true, "wrapAround": true, "pageDots": false}'>
         <div class="w-100">
-          <img src="assets/img/all-bamboo-products.jpg" class="img-fluid w-100" alt="...">
+          <img src="assets/img/product/all-bamboo-products.png" class="img-fluid w-100" alt="...">
           <div class="shape shape-top shape-fluid-x text-white">
             <svg viewBox="0 0 2880 72" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2880 0H0v54.112h720s289.42 40.248 705 0c416.5-37.733 735 0 735 0h720V0z" fill="currentColor"/></svg>          
           </div>
@@ -175,7 +177,7 @@
       </div>
     </section>
 
-    <section data-jarallax data-speed=".8" class="py-12 py-md-14 overlay overlay-black overlay-80 jarallax" style="background-image: url(assets/img/all-bamboo-products.jpg);">
+    <section data-jarallax data-speed=".8" class="py-12 py-md-14 overlay overlay-black overlay-80 jarallax" style="background-image: url(assets/img/product/all-bamboo-products.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-1- col-lg-8 text-center">
