--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12 col-md-4 order-md-1">
-            <img src="assets/img/food-1.jpg" class="img-fluid mb-6 mb-md-0" alt="...">
+            <img src="assets/img/product/landing-page-food.png" class="img-fluid mb-6 mb-md-0" alt="...">
           </div>
           <div class="col-12 col-md-4 order-md-2">
             <h1 class="display-5">
@@ -84,7 +84,7 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="card shadow-light-lg lift lift-lg">
-              <img src="assets/img/all-bamboo-products.jpg" alt="..." class="card-img-top">
+              <img src="assets/img/product/all-bamboo-products.png" alt="..." class="card-img-top">
               <!-- Shape -->
               <div class="position-relative">
                 <div class="shape shape-bottom shape-fluid-x text-white">
