--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
               </div>
               <div class="form-group mb-5">
                 <label class="form-label" for="contactEmail">Email *</label>
-                <input class="form-control" id="contactEmail" name="Email" type="email" placeholder="hello@domain.com" required>
+                <input class="form-control" id="contactEmail" name="Email" type="email" placeholder="name@email.com" required>
               </div>
               <div class="form-group mb-5">
                 <label class="form-label" for="contactEmail">Contact No. *</label>
@@ -80,7 +80,7 @@
               </div>
               <div class="form-group mb-5">
                 <label class="form-label" for="">Which products you are interested in</label>
-                <input class="form-control" id="" type="text" name="Want_Products" placeholder="">
+                <input class="form-control" id="" type="text" name="Want_Products" placeholder="Which products you are interested in">
               </div>
               <div class="form-group mb-5">
                 <label class="form-label" for="">Establishment Year</label>
