--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom border-primary border-4">
       <div class="container-fluid">
         <a class="navbar-brand m-auto" href="index.html">
           <img src="assets/img/logo/mago-logo-blue.png" class="navbar-brand" style="height: auto; width: 45%;">
@@ -43,7 +43,6 @@
         </div>
       </div>
     </nav>
-
     <!-- WELCOME -->
     <section class="pt-4 pt-md-11">
       <div class="container">
@@ -52,10 +51,11 @@
             <img src="assets/img/product/landing-page-food.png" class="img-fluid mb-6 mb-md-0" alt="...">
           </div>
           <div class="col-12 col-md-4 order-md-2">
-            <h1 class="display-5">
-              Order quality bamboo products. <br>
+            
+            <h2 class="display-">
+              Order quality food & bamboo products. <br>
               <span class="text-primary">unique and natural.</span>
-            </h1>
+            </h2>
             <p class="lead text-muted mb-0">
               Explore our range of edibles and best designed Bamboo products.
             </p>
@@ -290,7 +290,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-6 col-md-4 col-lg-4">
+          <div class="col-12 col-md-4 col-lg-4">
             <h6 class="fw-bold text-uppercase text-gray-700">
               Address
             </h6>
