--- a/bamboo-products.html
+++ b/bamboo-products.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom border-primary border-4">
       <div class="container-fluid">
         <a class="navbar-brand m-auto" href="index.html">
           <img src="assets/img/logo/mago-logo-blue.png" class="navbar-brand" style="height: auto; width: 45%;">
@@ -380,7 +380,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-6 col-md-4 col-lg-4">
+          <div class="col-12 col-md-4 col-lg-4">
             <h6 class="fw-bold text-uppercase text-gray-700">
               Address
             </h6>
