--- a/bamboo-products.html
+++ b/bamboo-products.html
@@ -91,8 +91,20 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-4 d-flex">
+      <div class="d-md-block d-none col-12 col-md-6 col-lg-4 d-flex">
         <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/toothbrush-1.jpg);">
+          <div class="card-footer">
+            <span class="card-meta pt-5">
+              <hr class="card-meta-divider text-white">
+              <h5 class="text-uppercase text-white" style="font-weight: bold;">
+                Toothbrush
+              </h5>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="d-sm-block d-md-none col-12 col-md-6 col-lg-4 d-flex">
+        <div class="card mb-6 mb-lg-0 pt-14 overlay overlay-black overlay-30 bg-cover shadow-light-lg lift lift-lg" style="background-image: url(assets/img/toothbrush-m-1.jpg);">
           <div class="card-footer">
             <span class="card-meta pt-5">
               <hr class="card-meta-divider text-white">
